--- a/_posts/help/2017-08-10-CTAN.md
+++ b/_posts/help/2017-08-10-CTAN.md
@@ -25,9 +25,13 @@ tlmgr update --all --repository http://mirrors.uicstat.com/CTAN/systems/texlive/
 
 其中的 `update --all` 指令可根据需要修改。
 
-如下载时出现问题请将地址中的 https 改为 http。
 
+如何通过 CTAN 镜像安装最新的 TeXLive / MacTeX  
+===================
 
-如需通过本镜像安装最新版/特定版本的 `CTAN` 请访问：
-* <http://mirrors.uicstat.com/en.html> [EN]
-* <http://mirrors.uicstat.com/cn.html> [zh-CN]
+* Windows / Linux 用户可以通过：http://mirrors.uicstat.com/CTAN/systems/texlive/Images/texlive2019.iso 下载 texlive2019 镜像；
+    * 下载后双击即可进入文件夹；
+    * 进入文件夹后，右键点击 install-tl-advanced.bat，并点击 Run as adminstrator 然后即可安装
+* macOS 用户可以通过：https://mirrors.uicstat.com/CTAN/systems/mac/mactex/MacTeX.pkg 安装
+    * 安装步骤如上，此处不再赘述。
+
