--- a/_posts/help/2017-01-17-CRAN.md
+++ b/_posts/help/2017-01-17-CRAN.md
@@ -16,8 +16,18 @@ CRAN 镜像使用帮助
 options("repos" = c(CRAN="https://mirrors.uicstat.com/CRAN/"))
 ```
 
+如何通过此镜像安装最新的 CRAN 
+===================
+
 打开 R 即可使用该 CRAN 镜像源安装 R 软件包。
 
-如需通过本镜像安装最新版/特定版本的 `R` 请访问：
-* <http://mirrors.uicstat.com/en.html> [EN]
-* <http://mirrors.uicstat.com/cn.html> [zh-CN]
+如需通过本镜像安装最新版/特定版本的 `R`?
+
+* Windows 用户，可以通过 http://mirrors.uicstat.com/CRAN/bin/windows/base/R-3.6.0-win.exe 获取；
+* Mac 用户，可以通过 http://mirrors.uicstat.com/CRAN/bin/macosx/R-3.6.0.pkg 获取；
+* Linux 用户请查阅 README： 
+    * ubuntu: http://mirrors.uicstat.com/CRAN/bin/linux/ubuntu/README.html
+    * debian: http://mirrors.uicstat.com/CRAN/bin/linux/debian
+    * redhat: http://mirrors.uicstat.com/CRAN/bin/linux/redhat/README
+    * suse: http://mirrors.uicstat.com/CRAN/bin/linux/README.html
+
