--- a/_posts/help/2017-08-10-CTAN.md
+++ b/_posts/help/2017-08-10-CTAN.md
@@ -35,3 +35,4 @@ tlmgr update --all --repository http://mirrors.uicstat.com/CTAN/systems/texlive/
 * macOS 用户可以通过：https://mirrors.uicstat.com/CTAN/systems/mac/mactex/MacTeX.pkg 安装
     * 安装步骤如上，此处不再赘述。
 
+<a href = "https://www.tug.org/texlive/doc/texlive-zh-cn/texlive-zh-cn.pdf">TeXlive2019 Guide Book </a>
